セクション18

--- a/views/shops/index.ejs
+++ b/views/shops/index.ejs
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-md-8">
           <div>
-            <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-book"></i>店舗情報</h2>
+            <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-book"></i> 店舗情報</h2>
             <table class="table table-bordered">
               <colgroup>
                 <col class="bg-light" style="width: 10rem">
@@ -66,21 +66,21 @@
 
           <div>
             <div class="position-relative">
-              <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-comments"></i>口コミ</h2>
+              <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-comments"></i> 口コミ</h2>
               <div class="position-absolute" style="right:0; top:0;">
-                <a class="btn btn-outline-success" href="#">投稿する</a>
+                <a class="btn btn-outline-success" href="/account/reviews/regist/<%= id %>">投稿する</a>
               </div>
             </div>
             <div>
               <% for (var review of reviews) { %>
-              <% review.shop = id %>  
+              <% review.shop = id; %>
               <%- include("./review.ejs", review) %>
               <% } %>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-heart"></i>おすすめのお店</h2>
+          <h2 class="border-bottom mt-5 mb-5 pb-2"><i class="fa fa-fw fa-heart"></i> おススメのお店</h2>
           <!-- Recommends -->
         </div>
       </div>
